fix: 优化动态SQL控制对象构造